--- a/.github/workflow/abdulrafay.yaml
+++ b/.github/workflow/abdulrafay.yaml
@@ -6,7 +6,7 @@ name: Website deployement
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main ]
+    branches: [ master ]
   # Allows you to run this workflow manually from the Actions tab
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
