--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -30,6 +30,6 @@ jobs:
       - name: Installing Surge
         run: npm install --global surge
       - name: deploying using surge
-        run: surge ./ bootcamp2025.surge.sh --token $ {{ secrets.practice }}
+        run: surge ./ bootcamp2025.surge.sh --token $ {{ secrets.PRACTICE }}
          
 
